--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,3 +1,9 @@
-<main-header></main-header>
-<app-sidebar></app-sidebar>
-<router-outlet />
+<div class="container">
+  <app-sidebar></app-sidebar>
+  <div class="right-side">
+    <main-header></main-header>
+    <router-outlet />
+  </div>
+</div>
+
+
