V-0.0.2 layout yapıldı ve dosya düzeni oturtulmaya başlandı

--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -2,7 +2,9 @@
   <app-sidebar></app-sidebar>
   <div class="right-side">
     <main-header></main-header>
-    <router-outlet />
+    <div class="content-area">
+      <router-outlet />
+    </div>
   </div>
 </div>
 
