--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -2,12 +2,23 @@
   display: grid;
   grid-template-columns: 18% 82%;
   height: 100vh;
+  overflow: hidden;
 }
 
 app-sidebar {
-  border-right: 1px solid #ccc;
+  position: relative;
+  overflow-y: auto;
 }
 
 .right-side {
-
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
+
+.content-area {
+  flex: 1;
+  overflow-y: auto;
+  padding: 20px;
+}
+
