--- a/src/app/layouts/main-layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layouts/main-layout/components/sidebar/sidebar.component.scss
@@ -1,21 +1,147 @@
 @import "../../../../../styles/veriable";
 
 header {
-    height: 74px;
-    padding-right: 1.2rem;
-    padding-left: 1.575rem;
+  height: 74px;
+  padding-right: 1.2rem;
+  padding-left: 3rem;
+  display: flex;
+  align-items: center;
+
+  a {
     display: flex;
     align-items: center;
+    color: #8c57ff;
+  }
 
-    svg {
-        width: 30px;
-        height: 24px;
-    }
-}
+  svg {
+    height: 30px;
+  }
 
-.sidebar-title {
-    font-size: 20px;
+  .sidebar-title {
+    font-size: 25px;
     font-weight: 600;
     color: $primary-text-color;
-    margin-left: 1rem;
+    margin-left: 1.2rem;
+    letter-spacing: 1px;
+  }
+}
+
+.header-box-shadow {
+  display: none;
+  background: linear-gradient(
+    #f4f5fa 5%,
+    rgba(244, 245, 250, 0.75) 45%,
+    rgba(244, 245, 250, 0.2) 80%,
+    transparent
+  );
+  position: absolute;
+  top: 74px;
+  width: 100%;
+  height: 20px;
+  pointer-events: none;
+  z-index: 2;
+}
+
+.dashboards {
+  margin-top: 10px;
+
+  li {
+    padding: 1rem 0;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    height: 45px;
+    border-radius: 0 50rem 50rem 0;
+
+    &:hover {
+      background: red;
+    }
+
+    a {
+      display: flex;
+      align-items: center;
+      color: $primary-text-color;
+      font-size: 16px;
+      font-weight: 500;
+
+      svg {
+        margin-right: 1rem;
+      }
+    }
+  }
+}
+
+.sidebar {
+  width: 250px;
+  background-color: #f0f0f0;
+  padding: 10px;
+}
+
+.menu {
+  list-style: none;
+  margin-top: 20px;
+
+  .menu-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    padding: 8px 43px 8px 30px;
+    height: 52px;
+    color: #433c50;
+    border-radius: 0 50rem 50rem 0;
+
+    &:hover {
+      background-color: #2e263d14;
+    }
+
+    &.active {
+      background: linear-gradient(270deg,#8c57ff,#c3a8ff);
+      color: white;
+    }
+
+    i {
+      font-size: 18px;
+      transition: all ease 0.2s;
+
+      &.rotated {
+        transform: rotate(90deg);
+      }
+    }
+
+    span {
+      font-size: 20px;
+    }
+  }
+}
+
+.submenu {
+  list-style: none;
+
+
+  li {
+    padding: 5px 0;
+
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      text-decoration: none;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      padding: 8px 43px 8px 60px;
+      height: 52px;
+      color: #433c50;
+      border-radius: 0 50rem 50rem 0;
+      font-size: 20px;
+
+      &.active {
+        background: linear-gradient(270deg,#8c57ff,#c3a8ff);
+        color: white;
+      }
+    }
+  }
 }
